tests/NormalTests/paczka1/fuzzy1/30012932.err
Error in line 3: OH1Cl S654 78,4
Error in line 27: wruIcQBd S654 M7,7
Error in line 24: wruIcQBd A803 77,0
Error in line 32: A355 A355 307
Error in line 31: wruIcQBd S654 72,9
